kubernetes/apps/postgresql/pgadmin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "pgadmin"
      port: 80
      targetPort: 80
  selector:
    app: pgadmin
